# VanVleckRecursion.jl.jl

./: .gitignore  LICENSE  Makefile  Manifest.toml  Project.toml  README.md  vV_recur.jl  vV_recur.py
benchmarks/: Project.toml  data.js  runbenchmarks.jl  van_Vleck_expansion.jl
dev/: .documenter-siteinfo.json  index.html  search_index.js
dev/API/: index.html
dev/literature/: index.html
dev/mathematical_background/: index.html
docs/: Project.toml  make.jl  mathematical_background.md  pages.jl
docs/src/: API.md  index.md  literature.md  mathematical_background.md
examples/: basic_usage.ipynb  basic_usage.jl  make_nb_examples.jl  vV_recur.py  van-Vleck_expansion_method.ipynb  van_Vleck_expansion_method.ipynb  van_Vleck_expansion_method.jl
previews/PR11/: .documenter-siteinfo.json  objects.inv
previews/PR11/API/: index.html
previews/PR17/: .documenter-siteinfo.json  index.html
previews/PR18/: .documenter-siteinfo.json
previews/PR19/: .documenter-siteinfo.json  index.html  objects.inv
previews/PR9/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
python/: INSTALLATION.md  README.md  pyproject.toml  test_vanvleck.py
python/examples/: basic_usage.ipynb  basic_usage_py.ipynb  vV_recur.py
python/vanvleck/: __init__.py  core.py
src/: Generator.jl  Kamiltonian.jl  Term.jl  Terms.jl  VanVleckRecursion.jl  arithmetic.jl  collections.jl  comparison.jl  display.jl  kamiltonian.jl  latex.jl  operations.jl  types.jl
test/: arithmetic.jl  display.jl  kamiltonian.jl  operations.jl  runtests.jl  types.jl  van_Vleck_expansion.jl
(+18 files in other folders)
