[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vanvleck"
version = "0.1.0"
description = "A Python package for computing Van Vleck transformations using recursion formulas"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "sympy"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/yourusername/vanvleck-recursion"
Repository = "https://github.com/yourusername/vanvleck-recursion"

[tool.setuptools.packages.find]
where = ["."]
include = ["vanvleck*"]
